--- a/views/results.erb
+++ b/views/results.erb
@@ -2,8 +2,8 @@
 
 <h2>Number of Words: <%= @text_from_user.count_of_words %></h2>
 
-<h2>Vowels: <%= @text_from_user. %></h2>
+<h2>Vowels: <%= @text_from_user.count_of_vowels %></h2>
 
-<h2>Consonants: <%= @text_from_user. %></h2>
+<h2>Consonants: <%= @text_from_user.count_of_consonants %></h2>
 
-<h2>Most Common Letter: <%= @text_from_user. %>, used <%= @text_from_user. %> times</h2>
+<h2>Most Common Letter: <%= @text_from_user.most_used_letter.keys.first %>, used <%= @text_from_user. %> times</h2>
